--- a/app/src/components/cart/cart.module.css
+++ b/app/src/components/cart/cart.module.css
@@ -343,3 +343,224 @@
   line-height: normal;
   letter-spacing: 0.8px;
 }
+@media only screen and (max-width: 414px) and (min-width: 300px) {
+  .smallWrap {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+  }
+  .prodWrap {
+    width: calc(100% - 10px);
+    height: auto;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .prodInCartWrap {
+    width: calc(100% - 24px);
+    height: auto;
+    padding: 12px;
+    border-radius: 30px;
+    background: var(--grayscale0-color);
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    justify-content: space-between;
+    margin-bottom: 30px;
+  }
+  .descriptionWrap {
+    width: 100%;
+    height: 155px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 15px;
+  }
+  .nameProd {
+    width: auto;
+  }
+  .smallDesc {
+    color: var(--grayscale70-color);
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; /* 142.857% */
+    letter-spacing: 0.7px;
+    width: 100%;
+    height: 40px;
+    overflow: hidden;
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 600px) and (min-width: 414px) {
+  .smallWrap {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+  }
+  .prodWrap {
+    width: calc(100% - 10px);
+    height: auto;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .prodInCartWrap {
+    width: calc(400px - 24px);
+    height: auto;
+    padding: 12px;
+    border-radius: 30px;
+    background: var(--grayscale0-color);
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    justify-content: space-between;
+    margin-bottom: 30px;
+  }
+  .descriptionWrap {
+    width: 100%;
+    height: 155px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 15px;
+  }
+  .nameProd {
+    width: auto;
+  }
+  .smallDesc {
+    color: var(--grayscale70-color);
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; /* 142.857% */
+    letter-spacing: 0.7px;
+    width: 100%;
+    height: 40px;
+    overflow: hidden;
+    text-align: center;
+  }
+}
+@media only screen and (max-width: 700px) and (min-width: 600px) {
+  .smallWrap {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+  }
+  .prodWrap {
+    width: calc(100% - 10px);
+    height: auto;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .prodInCartWrap {
+    width: calc(400px - 24px);
+    height: auto;
+    padding: 12px;
+    border-radius: 30px;
+    background: var(--grayscale0-color);
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    justify-content: space-between;
+    margin-bottom: 30px;
+  }
+  .descriptionWrap {
+    width: 100%;
+    height: 155px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 15px;
+  }
+  .nameProd {
+    width: auto;
+  }
+  .smallDesc {
+    color: var(--grayscale70-color);
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; /* 142.857% */
+    letter-spacing: 0.7px;
+    width: 100%;
+    height: 40px;
+    overflow: hidden;
+    text-align: center;
+  }
+}
+@media only screen and (max-width: 1023px) and (min-width: 700px) {
+  .smallWrap {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 50px;
+  }
+  .prodWrap {
+    width: calc(700px - 10px);
+    height: auto;
+    padding-left: 10px;
+    display: flex;
+
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+@media only screen and (max-width: 1440px) and (min-width: 1200px) {
+}
+
+@media only screen and (max-width: 1200px) and (min-width: 1024px) {
+  .smallWrap {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 50px;
+  }
+  .prodWrap {
+    width: calc(777px - 10px);
+    height: auto;
+    padding-left: 10px;
+    display: flex;
+
+    align-items: center;
+    justify-content: space-between;
+  }
+}
