--- a/app/src/components/chekout/checkout.module.css
+++ b/app/src/components/chekout/checkout.module.css
@@ -332,6 +332,30 @@
   font-weight: 500;
   line-height: normal;
 }
+.inputNewSmallZip {
+  border: none;
+  height: 20px;
+  width: 120px;
+  margin-left: 20px;
+  color: #999;
+
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: var(--custom-font);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.inputNewSmallZip::placeholder {
+  color: #999;
+
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: var(--custom-font);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
 .inputNewBig::placeholder {
   color: #999;
 
@@ -772,4 +796,718 @@
   cursor: pointer;
   margin-top: 20px;
   margin-bottom: 50px;
+}
+@media only screen and (max-width: 414px) and (min-width: 300px) {
+  .smallWrapCheck {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .firstBlockCheckWrap {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .wrapOneAddress {
+    padding: 16px;
+    width: calc(100% - 32px);
+    height: calc(96px - 32px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    box-shadow: 4px 4px 44px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .wrapOneAddressTrue {
+    padding: 16px;
+    width: calc(100% - 32px);
+    height: calc(96px - 32px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    background: #fffceb;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .inputNewSmall {
+    border: none;
+    height: 20px;
+    width: 70px;
+    margin-left: 20px;
+    color: #999;
+
+    font-feature-settings: "clig" off, "liga" off;
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-right: 5px;
+  }
+
+  .inputNewSmallZip {
+    border: none;
+    height: 20px;
+    width: 60px;
+    margin-left: 20px;
+    color: #999;
+
+    font-feature-settings: "clig" off, "liga" off;
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+  .productBlock {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 15px;
+  }
+  .blockPicDS {
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+  .prodInformationWrap {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-left: 0px;
+  }
+  .proceInputBigSelect {
+    margin-top: 0px;
+
+    width: 200px;
+    height: 50px;
+    border-radius: 999px;
+    background: var(--grayscale0-color);
+    border: none;
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    padding-left: 30px;
+    appearance: none;
+    color: #333;
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 20px; /* 142.857% */
+    letter-spacing: 0.7px;
+  }
+  .byOnThis {
+    width: 100%;
+    height: 50px;
+    border-radius: 999px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--primarynormal-color);
+    color: var(--grayscale0-color);
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 20px; /* 142.857% */
+    letter-spacing: 0.7px;
+    cursor: pointer;
+  }
+  .secondBlockCheckWr {
+    padding: 20px 16px;
+    width: calc(100% - 32px);
+    height: auto;
+    border-radius: 30px;
+    background: var(--grayscale0-color);
+    box-shadow: 4px 4px 44px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .allAdressInOne {
+    margin: 0;
+    color: #999;
+
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 100%;
+    height: 34px;
+  }
+}
+
+@media only screen and (max-width: 600px) and (min-width: 414px) {
+  .smallWrapCheck {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .firstBlockCheckWrap {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .wrapOneAddress {
+    padding: 16px;
+    width: calc(100% - 32px);
+    height: calc(96px - 32px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    box-shadow: 4px 4px 44px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .wrapOneAddressTrue {
+    padding: 16px;
+    width: calc(387px - 32px);
+    height: calc(96px - 32px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    background: #fffceb;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .inputNewSmall {
+    border: none;
+    height: 20px;
+    width: 70px;
+    margin-left: 20px;
+    color: #999;
+
+    font-feature-settings: "clig" off, "liga" off;
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-right: 5px;
+  }
+
+  .inputNewSmallZip {
+    border: none;
+    height: 20px;
+    width: 60px;
+    margin-left: 20px;
+    color: #999;
+
+    font-feature-settings: "clig" off, "liga" off;
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+  .productBlock {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 15px;
+  }
+  .blockPicDS {
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+  .prodInformationWrap {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-left: 0px;
+  }
+  .proceInputBigSelect {
+    margin-top: 0px;
+
+    width: 200px;
+    height: 50px;
+    border-radius: 999px;
+    background: var(--grayscale0-color);
+    border: none;
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    padding-left: 30px;
+    appearance: none;
+    color: #333;
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 20px; /* 142.857% */
+    letter-spacing: 0.7px;
+  }
+  .byOnThis {
+    width: 100%;
+    height: 50px;
+    border-radius: 999px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--primarynormal-color);
+    color: var(--grayscale0-color);
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 20px; /* 142.857% */
+    letter-spacing: 0.7px;
+    cursor: pointer;
+  }
+  .secondBlockCheckWr {
+    padding: 20px 16px;
+    width: calc(386px - 32px);
+    height: auto;
+    border-radius: 30px;
+    background: var(--grayscale0-color);
+    box-shadow: 4px 4px 44px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .allAdressInOne {
+    margin: 0;
+    color: #999;
+
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 100%;
+    height: 34px;
+  }
+  .wrapOneBlockVend {
+    padding: 30px;
+    width: calc(400px - 60px);
+    height: auto;
+    border-radius: 30px;
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    align-self: center;
+  }
+}
+@media only screen and (max-width: 700px) and (min-width: 600px) {
+  .smallWrapCheck {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .firstBlockCheckWrap {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .wrapOneAddress {
+    padding: 16px;
+    width: calc(100% - 32px);
+    height: calc(96px - 32px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    box-shadow: 4px 4px 44px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .wrapOneAddressTrue {
+    padding: 16px;
+    width: calc(387px - 32px);
+    height: calc(96px - 32px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    background: #fffceb;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .inputNewSmall {
+    border: none;
+    height: 20px;
+    width: 70px;
+    margin-left: 20px;
+    color: #999;
+
+    font-feature-settings: "clig" off, "liga" off;
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-right: 5px;
+  }
+
+  .inputNewSmallZip {
+    border: none;
+    height: 20px;
+    width: 60px;
+    margin-left: 20px;
+    color: #999;
+
+    font-feature-settings: "clig" off, "liga" off;
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+  .productBlock {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 15px;
+  }
+  .blockPicDS {
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+  .prodInformationWrap {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-left: 0px;
+  }
+  .proceInputBigSelect {
+    margin-top: 0px;
+
+    width: 200px;
+    height: 50px;
+    border-radius: 999px;
+    background: var(--grayscale0-color);
+    border: none;
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    padding-left: 30px;
+    appearance: none;
+    color: #333;
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 20px; /* 142.857% */
+    letter-spacing: 0.7px;
+  }
+  .byOnThis {
+    width: 100%;
+    height: 50px;
+    border-radius: 999px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--primarynormal-color);
+    color: var(--grayscale0-color);
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 20px; /* 142.857% */
+    letter-spacing: 0.7px;
+    cursor: pointer;
+  }
+  .secondBlockCheckWr {
+    padding: 20px 16px;
+    width: calc(386px - 32px);
+    height: auto;
+    border-radius: 30px;
+    background: var(--grayscale0-color);
+    box-shadow: 4px 4px 44px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .allAdressInOne {
+    margin: 0;
+    color: #999;
+
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 100%;
+    height: 34px;
+  }
+  .wrapOneBlockVend {
+    padding: 30px;
+    width: calc(400px - 60px);
+    height: auto;
+    border-radius: 30px;
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    align-self: center;
+  }
+}
+@media only screen and (max-width: 1023px) and (min-width: 700px) {
+  .smallWrapCheck {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .firstBlockCheckWrap {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .wrapOneAddress {
+    padding: 16px;
+    width: calc(100% - 32px);
+    height: calc(96px - 32px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    box-shadow: 4px 4px 44px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .wrapOneAddressTrue {
+    padding: 16px;
+    width: calc(387px - 32px);
+    height: calc(96px - 32px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    background: #fffceb;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .inputNewSmall {
+    border: none;
+    height: 20px;
+    width: 70px;
+    margin-left: 20px;
+    color: #999;
+
+    font-feature-settings: "clig" off, "liga" off;
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin-right: 5px;
+  }
+
+  .inputNewSmallZip {
+    border: none;
+    height: 20px;
+    width: 60px;
+    margin-left: 20px;
+    color: #999;
+
+    font-feature-settings: "clig" off, "liga" off;
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+  .productBlock {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 15px;
+  }
+  .blockPicDS {
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+  .prodInformationWrap {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-left: 0px;
+  }
+  .proceInputBigSelect {
+    margin-top: 0px;
+
+    width: 200px;
+    height: 50px;
+    border-radius: 999px;
+    background: var(--grayscale0-color);
+    border: none;
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    padding-left: 30px;
+    appearance: none;
+    color: #333;
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 20px; /* 142.857% */
+    letter-spacing: 0.7px;
+  }
+  .byOnThis {
+    width: 100%;
+    height: 50px;
+    border-radius: 999px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--primarynormal-color);
+    color: var(--grayscale0-color);
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 20px; /* 142.857% */
+    letter-spacing: 0.7px;
+    cursor: pointer;
+  }
+  .secondBlockCheckWr {
+    padding: 20px 16px;
+    width: calc(386px - 32px);
+    height: auto;
+    border-radius: 30px;
+    background: var(--grayscale0-color);
+    box-shadow: 4px 4px 44px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .allAdressInOne {
+    margin: 0;
+    color: #999;
+
+    font-family: var(--custom-font);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 100%;
+    height: 34px;
+  }
+  .wrapOneBlockVend {
+    padding: 30px;
+    width: calc(400px - 60px);
+    height: auto;
+    border-radius: 30px;
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    align-self: center;
+  }
+}
+@media only screen and (max-width: 1630px) and (min-width: 1440px) {
+  .smallWrapCheck {
+    width: 1440px;
+    height: auto;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .firstBlockCheckWrap {
+    width: 1000px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+@media only screen and (max-width: 1440px) and (min-width: 1200px) {
+  .smallWrapCheck {
+    width: 1200px;
+    height: auto;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .firstBlockCheckWrap {
+    width: 800px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+@media only screen and (max-width: 1200px) and (min-width: 1024px) {
+  .smallWrapCheck {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .firstBlockCheckWrap {
+    width: 1000px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
