--- a/app/src/components/password/emailSend.module.css
+++ b/app/src/components/password/emailSend.module.css
@@ -8,7 +8,7 @@
   --grayscale80-color: #333333;
   --grayscale90-color: #1a1a1a;
   --grayscale400-color: #bdbdbd;
-  --primarynormal-color: #609966;
+  --primarynormal-color: #486642;
   --black-color: #000000;
 
   --custom-font: Steppe;
@@ -215,4 +215,134 @@
   line-height: 20px; /* 142.857% */
   letter-spacing: 0.7px;
   text-decoration: none;
+}
+@media only screen and (max-width: 414px) and (min-width: 300px) {
+  .wrapLogForm {
+    width: calc(100%);
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .form {
+    padding: 20px;
+    width: calc(100% - 40px);
+    height: calc(385px - 40px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .stForLogBig {
+    color: var(--grayscale80-color);
+    font-family: "Orpheus Pro";
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 52px; /* 115.556% */
+    letter-spacing: 2.25px;
+    margin: 0;
+  }
+}
+
+@media only screen and (max-width: 600px) and (min-width: 414px) {
+  .wrapLogForm {
+    width: calc(100%);
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .form {
+    padding: 20px;
+    width: calc(100% - 40px);
+    height: calc(385px - 40px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .stForLogBig {
+    color: var(--grayscale80-color);
+    font-family: "Orpheus Pro";
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 52px; /* 115.556% */
+    letter-spacing: 2.25px;
+    margin: 0;
+  }
+}
+@media only screen and (max-width: 700px) and (min-width: 600px) {
+  .wrapLogForm {
+    width: calc(100%);
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .form {
+    padding: 20px;
+    width: calc(100% - 40px);
+    height: calc(385px - 40px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .stForLogBig {
+    color: var(--grayscale80-color);
+    font-family: "Orpheus Pro";
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 52px; /* 115.556% */
+    letter-spacing: 2.25px;
+    margin: 0;
+  }
+}
+@media only screen and (max-width: 1023px) and (min-width: 700px) {
+  .wrapLogForm {
+    width: calc(70%);
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .form {
+    padding: 20px;
+    width: calc(100% - 40px);
+    height: calc(385px - 40px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .stForLogBig {
+    color: var(--grayscale80-color);
+    font-family: "Orpheus Pro";
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 52px; /* 115.556% */
+    letter-spacing: 2.25px;
+    margin: 0;
+  }
+}
+@media only screen and (max-width: 1440px) and (min-width: 1200px) {
+}
+
+@media only screen and (max-width: 1200px) and (min-width: 1024px) {
 }
