--- a/app/src/components/privacyP/privacy.module.css
+++ b/app/src/components/privacyP/privacy.module.css
@@ -8,7 +8,7 @@
   --grayscale80-color: #333333;
   --grayscale90-color: #1a1a1a;
   --grayscale400-color: #bdbdbd;
-  --primarynormal-color: #609966;
+  --primarynormal-color: #486642;
   --black-color: #000000;
 
   --custom-font: Steppe;
@@ -112,4 +112,129 @@
   font-weight: 500;
   line-height: 36px; /* 128.571% */
   letter-spacing: 1.4px;
+}
+@media only screen and (max-width: 414px) and (min-width: 300px) {
+  .wrapsmalPriv {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+  }
+  .wrapFirstBlock {
+    width: calc(100% - 20px);
+    padding: 10px;
+    min-height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .wrapBlockText {
+    width: calc(100% - 20px);
+    padding: 10px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+@media only screen and (max-width: 600px) and (min-width: 414px) {
+  .wrapsmalPriv {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+  }
+  .wrapFirstBlock {
+    width: 336px;
+    padding: 10px;
+    min-height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .wrapBlockText {
+    width: calc(100% - 20px);
+    padding: 10px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+@media only screen and (max-width: 700px) and (min-width: 600px) {
+  .wrapsmalPriv {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+  }
+  .wrapFirstBlock {
+    width: 336px;
+    padding: 10px;
+    min-height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .wrapBlockText {
+    width: calc(100% - 20px);
+    padding: 10px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+@media only screen and (max-width: 1023px) and (min-width: 700px) {
+  .wrapsmalPriv {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+  }
+  .wrapFirstBlock {
+    width: 336px;
+    padding: 10px;
+    min-height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .wrapBlockText {
+    width: calc(100% - 20px);
+    padding: 10px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+@media only screen and (max-width: 1440px) and (min-width: 1200px) {
+}
+
+@media only screen and (max-width: 1200px) and (min-width: 1024px) {
+  .wrapBlockText {
+    width: calc(600px);
+
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .wrapsmalPriv {
+    width: 1023px;
+  }
 }
