--- a/app/src/components/signUp/singnUp.module.css
+++ b/app/src/components/signUp/singnUp.module.css
@@ -8,7 +8,7 @@
   --grayscale80-color: #333333;
   --grayscale90-color: #1a1a1a;
   --grayscale400-color: #bdbdbd;
-  --primarynormal-color: #609966;
+  --primarynormal-color: #486642;
   --black-color: #000000;
 
   --custom-font: Steppe;
@@ -234,4 +234,226 @@
   line-height: 20px; /* 142.857% */
   letter-spacing: 0.7px;
   text-decoration: none;
+}
+@media only screen and (max-width: 414px) and (min-width: 300px) {
+  .wrapSignIn {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #edf1d6;
+  }
+  .wrapIcon {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .logPic {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+  .wrapLogForm {
+    width: 100%;
+    height: 858px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .form {
+    padding: 10px;
+    width: calc(100% - 20px);
+    height: calc(auto - 20px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .wralAllRedEx {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .buttonWrGren {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+
+@media only screen and (max-width: 600px) and (min-width: 414px) {
+  .wrapSignIn {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #edf1d6;
+  }
+  .wrapIcon {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .logPic {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+  .wrapLogForm {
+    width: 100%;
+    height: 858px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .form {
+    padding: 10px;
+    width: calc(100% - 20px);
+    height: calc(auto - 20px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .wralAllRedEx {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .buttonWrGren {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+@media only screen and (max-width: 700px) and (min-width: 600px) {
+  .wrapSignIn {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #edf1d6;
+  }
+  .wrapIcon {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .logPic {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+  .wrapLogForm {
+    width: 100%;
+    height: 858px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .form {
+    padding: 10px;
+    width: calc(100% - 20px);
+    height: calc(auto - 20px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .wralAllRedEx {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .buttonWrGren {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+@media only screen and (max-width: 1023px) and (min-width: 700px) {
+  .wrapSignIn {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #edf1d6;
+  }
+  .wrapIcon {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .logPic {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+  .wrapLogForm {
+    width: 100%;
+    height: 858px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .form {
+    padding: 10px;
+    width: calc(636px - 80px);
+    height: calc(746px - 80px);
+    border-radius: 20px;
+    background: var(--grayscale0-color);
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  .wralAllRedEx {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .buttonWrGren {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+@media only screen and (max-width: 1440px) and (min-width: 1200px) {
+}
+
+@media only screen and (max-width: 1200px) and (min-width: 1024px) {
 }
