--- a/app/src/components/standartComponent/footer.module.css
+++ b/app/src/components/standartComponent/footer.module.css
@@ -87,3 +87,145 @@
 .facebook {
   margin-right: 17px;
 }
+@media only screen and (max-width: 414px) and (min-width: 300px) {
+  .mainFooter {
+    width: 100%;
+    height: auto;
+  }
+  .smallWrap {
+    width: calc(100% - 20px);
+    height: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 44px;
+  }
+  .descInFooter {
+    width: 100%;
+    height: 90px;
+    color: #fffceb;
+
+    font-family: AgendaT;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 30px;
+    margin-top: 18px;
+    margin-bottom: 29px;
+  }
+  .firstBlockWrap:nth-of-type(2) {
+    width: 200px;
+    margin-top: 20px;
+  }
+  .firstBlockWrap:nth-of-type(3) {
+    width: 200px;
+    margin-top: 20px;
+  }
+  .firstBlockWrap:nth-of-type(4) {
+    width: 200px;
+    margin-top: 20px;
+  }
+}
+@media only screen and (max-width: 600px) and (min-width: 414px) {
+  .mainFooter {
+    width: 100%;
+    height: auto;
+  }
+  .smallWrap {
+    width: calc(100% - 20px);
+    height: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 44px;
+  }
+  .descInFooter {
+    width: 100%;
+    height: 90px;
+    color: #fffceb;
+
+    font-family: AgendaT;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 30px;
+    margin-top: 18px;
+    margin-bottom: 29px;
+  }
+  .firstBlockWrap:nth-of-type(2) {
+    width: 200px;
+    margin-top: 20px;
+  }
+  .firstBlockWrap:nth-of-type(3) {
+    width: 200px;
+    margin-top: 20px;
+  }
+  .firstBlockWrap:nth-of-type(4) {
+    width: 200px;
+    margin-top: 20px;
+  }
+}
+@media only screen and (max-width: 700px) and (min-width: 600px) {
+  .mainFooter {
+    width: 100%;
+    height: auto;
+  }
+  .smallWrap {
+    width: calc(100% - 20px);
+    height: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+
+    align-items: flex-start;
+    flex-wrap: wrap;
+
+    justify-content: space-between;
+    margin-top: 44px;
+  }
+  .firstBlockWrap:first-child {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 1100px) and (min-width: 700px) {
+  .mainFooter {
+    width: 100%;
+    height: auto;
+  }
+  .smallWrap {
+    width: calc(100% - 20px);
+    height: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+
+    align-items: flex-start;
+    flex-wrap: wrap;
+
+    justify-content: space-between;
+    margin-top: 44px;
+  }
+  .firstBlockWrap:first-child {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 1440px) and (min-width: 1100px) {
+  .smallWrap {
+    width: calc(99% - 40px);
+    height: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 44px;
+  }
+}
+@media only screen and (max-width: 1100px) and (min-width: 1024px) {
+}
