--- a/app/src/components/vendorAdmin/dashboard/mainDashboard/standartComponent/orders/orders.module.css
+++ b/app/src/components/vendorAdmin/dashboard/mainDashboard/standartComponent/orders/orders.module.css
@@ -413,3 +413,187 @@
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
 }
+@media only screen and (max-width: 414px) and (min-width: 300px) {
+  .allOrdersInVendor {
+    width: calc(100% - 20px);
+    padding-left: 10px;
+    padding-right: 10px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 22px;
+  }
+  .allForDashProductWrap {
+    width: calc(100% - 32px);
+    min-height: 470px;
+    padding: 16px;
+    border-radius: 14px;
+    background: var(--grayscale0-color);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border-radius: 14px;
+    overflow-x: auto;
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+  }
+  .wrapAllProcProd {
+    width: 400px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+@media only screen and (max-width: 600px) and (min-width: 414px) {
+  .allOrdersInVendor {
+    width: calc(100% - 20px);
+    padding-left: 10px;
+    padding-right: 10px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 22px;
+  }
+  .allForDashProductWrap {
+    width: calc(100% - 32px);
+    min-height: 470px;
+    padding: 16px;
+    border-radius: 14px;
+    background: var(--grayscale0-color);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border-radius: 14px;
+    overflow-x: auto;
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+  }
+  .wrapAllProcProd {
+    width: 400px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+@media only screen and (max-width: 700px) and (min-width: 600px) {
+  .allOrdersInVendor {
+    width: calc(100% - 20px);
+    padding-left: 10px;
+    padding-right: 10px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 22px;
+  }
+  .allForDashProductWrap {
+    width: calc(100% - 32px);
+    min-height: 470px;
+    padding: 16px;
+    border-radius: 14px;
+    background: var(--grayscale0-color);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border-radius: 14px;
+    overflow-x: auto;
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+  }
+  .wrapAllProcProd {
+    width: 400px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+@media only screen and (max-width: 1023px) and (min-width: 700px) {
+  .allOrdersInVendor {
+    width: calc(100% - 20px);
+    padding-left: 10px;
+    padding-right: 10px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 22px;
+  }
+  .allForDashProductWrap {
+    width: calc(100% - 32px);
+    min-height: 470px;
+    padding: 16px;
+    border-radius: 14px;
+    background: var(--grayscale0-color);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border-radius: 14px;
+    overflow-x: auto;
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+  }
+  .wrapAllProcProd {
+    width: 400px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+@media only screen and (max-width: 1440px) and (min-width: 1200px) {
+  .allForDashProductWrap {
+    width: calc(100% - 32px);
+    min-height: 470px;
+    padding: 16px;
+    border-radius: 14px;
+    background: var(--grayscale0-color);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border-radius: 14px;
+    overflow-x: auto;
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+  }
+  .wrapAllProcProd {
+    width: 400px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+@media only screen and (max-width: 1200px) and (min-width: 1024px) {
+  .allOrdersInVendor {
+    width: calc(100% - 20px);
+    padding-left: 10px;
+    padding-right: 10px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 22px;
+  }
+  .allForDashProductWrap {
+    width: calc(100% - 32px);
+    min-height: 470px;
+    padding: 16px;
+    border-radius: 14px;
+    background: var(--grayscale0-color);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border-radius: 14px;
+    overflow-x: auto;
+    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.05);
+  }
+  .wrapAllProcProd {
+    width: 400px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
