--- a/app/src/components/vendorPage/vendor.module.css
+++ b/app/src/components/vendorPage/vendor.module.css
@@ -672,3 +672,17 @@
   line-height: 16px; /* 145.455% */
   letter-spacing: 0.55px;
 }
+@media only screen and (max-width: 414px) and (min-width: 300px) {
+}
+
+@media only screen and (max-width: 600px) and (min-width: 414px) {
+}
+@media only screen and (max-width: 700px) and (min-width: 600px) {
+}
+@media only screen and (max-width: 1023px) and (min-width: 700px) {
+}
+@media only screen and (max-width: 1440px) and (min-width: 1200px) {
+}
+
+@media only screen and (max-width: 1200px) and (min-width: 1024px) {
+}
