--- a/app/src/components/vendorPageNew/catalog.module.css
+++ b/app/src/components/vendorPageNew/catalog.module.css
@@ -481,3 +481,17 @@
   margin: 0;
   cursor: pointer;
 }
+@media only screen and (max-width: 414px) and (min-width: 300px) {
+}
+
+@media only screen and (max-width: 600px) and (min-width: 414px) {
+}
+@media only screen and (max-width: 700px) and (min-width: 600px) {
+}
+@media only screen and (max-width: 1023px) and (min-width: 700px) {
+}
+@media only screen and (max-width: 1440px) and (min-width: 1200px) {
+}
+
+@media only screen and (max-width: 1200px) and (min-width: 1024px) {
+}
